--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "description": "",
+  "description": "backend",
   "main": "app.js",
   "scripts": {
     "start": "node app.js"
